Unwinding with Segues. Demonstrates how to transport values.

--- a/hiboux/Base.lproj/Main_iPhone.storyboard
+++ b/hiboux/Base.lproj/Main_iPhone.storyboard
@@ -117,6 +117,7 @@
                                 </state>
                                 <connections>
                                     <action selector="done:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="MGh-Fa-Xrl"/>
+                                    <segue destination="t4f-fE-erR" kind="unwind" unwindAction="unwindToListOwls:" id="ghN-6i-AB0"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -130,6 +131,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+                <exit id="t4f-fE-erR" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="840" y="572"/>
         </scene>
