Revert "Empty Table View"
This reverts commit 4d43898f5717585cfaed6981c17b87a338920530.

--- a/hiboux/Base.lproj/Main_iPhone.storyboard
+++ b/hiboux/Base.lproj/Main_iPhone.storyboard
@@ -25,28 +25,15 @@
                             </connections>
                         </button>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ListPrototypeCell" textLabel="Mkn-GP-MBd" style="IBUITableViewCellStyleDefault" id="IOi-mI-BRy">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="IOi-mI-BRy">
                                 <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IOi-mI-BRy" id="cbO-Y5-WY6">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Mkn-GP-MBd">
-                                            <rect key="frame" x="15" y="0.0" width="290" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="ISh-fc-ITo" id="RXo-gD-Y36"/>
-                            <outlet property="delegate" destination="ISh-fc-ITo" id="Y5H-RC-pQB"/>
-                        </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Title" id="z8X-iz-lHd">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="xBt-7L-zKL">
